# cli

./: Cargo.toml  README.md  install.ps1
src/: api.rs  backend.rs  color.rs  commands.rs  install.rs  main.rs
